pisi (0.5.1-0ubuntu1) karmic; urgency=low

  * task 34: Integrate Google Captcha (gdata baed modules)

 -- Michael Pilgermann <kichkasch@gmx.de>  Thu, 04 Feb 2010 19:07:36 +0100
 
pisi (0.5-0ubuntu6) karmic; urgency=low

  * fixed bug 30: Exception in DBUS-SIM module
  * fixed bug 32: OPIMD - only one backend; selection 
  * task 28: OPIMD: change field_support to true
  * fixed bug 33: incoming calls number-to-name resolving is not working

 -- Michael Pilgermann <kichkasch@gmx.de>  Fri, 02 Apr 2010 09:01:11 +0200

pisi (0.5-0ubuntu5) karmic; urgency=low

  * Fixed (again) required libsyncml lib (>= 0.5.4)

 -- Michael Pilgermann <kichkasch@gmx.de>  Thu, 04 Feb 2010 19:07:36 +0100

pisi (0.5-0ubuntu4) karmic; urgency=low

  * Fixed required libsyncml lib (>= 0.5.4)

 -- Michael Pilgermann <kichkasch@gmx.de>  Thu, 04 Feb 2010 18:54:09 +0100

pisi (0.5-0ubuntu3) karmic; urgency=low

  * Change to Karmic for Ubuntu releasing

 -- Michael Pilgermann <kichkasch@gmx.de>  Sun, 31 Jan 2010 18:53:23 +0100