@@ -1,6 +1,7 @@
 pisi (0.5.1-0ubuntu1) karmic; urgency=low
 
   * task 34: Integrate Google Captcha (gdata baed modules)
+  * task 4: Polishing - apply detailed progress on google modules
 
  -- Michael Pilgermann <kichkasch@gmx.de>  Thu, 04 Feb 2010 19:07:36 +0100
  
